k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: adeline-gueret-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - adeline.local
      secretName: adeline-gueret-tls
  rules:
    - host: adeline.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: adeline-gueret-service
                port:
                  number: 80
